--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   </script>
   <?!= HtmlService.createHtmlOutputFromFile('Stylesheet').getContent(); ?>
   <style>
-    /* Custom overrides for the new button layout */
+    /* Custom overrides for buttons */
     .big-grade-btn {
-      background: linear-gradient(135deg, #10b981, #059669); /* Green Gradient */
+      background: linear-gradient(135deg, #10b981, #059669);
       color: white;
       border: none;
       padding: 15px 20px;
@@ -40,7 +40,6 @@
     }
     .small-grade-btn:hover { background: #e5e7eb; }
 
-    /* Hide the old textboxes area since user requested deletion */
     .grading-panel { justify-content: flex-start; }
   </style>
 </head>
@@ -95,7 +94,9 @@
                 <span id="pageGuide">Page 1</span>
               </div>
             </div>
-            <iframe id="pdfFrame" src="" width="100%" height="100%"></iframe>
+            <div id="pdfContainer" style="overflow-y: auto; height: 100%; background: #525659; padding: 20px; display: flex; flex-direction: column; align-items: center; gap: 20px;">
+                <p style="color: #ccc; margin-top: 50px;">Select a file to preview.</p>
+            </div>
           </div>
 
           <div class="grading-panel">
@@ -137,8 +138,7 @@
                 <button onclick="downloadPdf()" class="nav-sm" style="flex: 1;">Download PDF</button>
               </div>
             </div>
-            
-            </div>
+          </div>
         </div>
       </div>
 
