--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
               <div class="info-box" style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 15px;">
                 <label for="modelSelect" style="font-size:0.9rem;">Model:</label>
                 <select id="modelSelect" style="background: white; border: 1px solid #ccc; border-radius: 4px; padding: 4px; max-width: 150px;">
-                  <option value="Claude-Opus-4.5" selected>Claude Opus 4.5</option>
-                  <option value="Gemini-3-Pro">Gemini 3 Pro</option>
+                  <option value="Claude-Opus-4.5" >Claude Opus 4.5</option>
+                  <option value="Gemini-3-Pro"selected>Gemini 3 Pro</option>
                   <option value="GPT-5.1">GPT 5.1</option>
                 </select>
               </div>
